WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124452
[Curl] Basic authentication is not reused.
https://bugs.webkit.org/show_bug.cgi?id=124452
Summary
[Curl] Basic authentication is not reused.
peavo
Reported
2013-11-16 02:27:30 PST
After I've made a successful basic authentication, the credentials are not reused for later requests. In the CFNetwork port, this is solved by first checking if credentials exists for a given url in a new request. If credentials are found, basic authentication is tried first. Also, when a 401 response is received, the first thing the CFNetwork port does, is to check if m_user/m_pass is set (which means no authentication method is given in the request). If so, the m_user/m_pass credential is sent in the request to the server. This can be done in the same way for the Curl version.
Attachments
Patch
(3.40 KB, patch)
2013-11-16 02:38 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-11-16 02:38:34 PST
Created
attachment 217123
[details]
Patch
Brent Fulgham
Comment 2
2013-11-18 10:17:42 PST
Comment on
attachment 217123
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-11-18 10:42:56 PST
Comment on
attachment 217123
[details]
Patch Clearing flags on attachment: 217123 Committed
r159435
: <
http://trac.webkit.org/changeset/159435
>
WebKit Commit Bot
Comment 4
2013-11-18 10:42:58 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2013-11-18 11:02:27 PST
(In reply to
comment #2
)
> (From update of
attachment 217123
[details]
) > r=me
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug